--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MattyTheDeveloper/Minefate#readme",
   "dependencies": {
+    "axios": "^1.2.1",
     "discord.js": "^14.7.1"
   }
 }
